environments/prod/kubernetes/services/b2b/booking-engine-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-engine-ui
  labels:
    app: booking-engine-ui
    env: prod
  namespace: b2b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-engine-ui
  revisionHistoryLimit: 1
  template:
    metadata:
      name: booking-engine-ui
      labels:
        env: prod
        app: booking-engine-ui
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: booking-engine-ui
        image: steblynskyi-docker.jfrog.io/b2b-booking-engine-ui:5a7b903
        imagePullPolicy: Always
        args:
        - -base-path=/reservations
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: booking-engine-ui
  namespace: b2b
  labels:
    Domain: b2b-booking-engine-ui.steblynskyi.com
spec:
  selector:
    app: booking-engine-ui
    env: prod
  ports:
  - port: 80
    name: http
    targetPort: 8080
    protocol: TCP
  type: NodePort
