environments/prod/kubernetes/services/b2b/unit-owners-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unit-owners-ui
  labels:
    app: unit-owners-ui
    env: prod
  namespace: b2b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: unit-owners-ui
  revisionHistoryLimit: 1
  template:
    metadata:
      name: unit-owners-ui
      labels:
        env: prod
        app: unit-owners-ui
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: unit-owners-ui
        image: steblynskyi-docker.jfrog.io/b2b-unit-owners-ui:92ce5eb
        imagePullPolicy: IfNotPresent
        args:
        - -base-path=/unit-owners/portal
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 150m
            memory: 256Mi
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: unit-owners-ui
  namespace: b2b
spec:
  selector:
    app: unit-owners-ui
    env: prod
  ports:
  - port: 80
    name: http
    targetPort: 8080
    protocol: TCP
  type: NodePort
